--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bluebtm"
     tools:context=".MainActivity">
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,61 +17,72 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/bluebtm">
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="200dp"
                 android:layout_marginBottom="0dp"
                 android:fontFamily="@font/roboto_medium"
-                android:text="Welcome\nBack"
+                android:paddingLeft="20dp"
+                android:text="Reset\nPassword"
                 android:textColor="@color/white"
-                android:textSize="35sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/ll1" />
+                android:textSize="38sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp"
+                android:layout_marginTop="20dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="20dp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:fontFamily="@font/roboto_medium"
+                android:text="Forgot Your Password.\nWe'll send a Email from where you can reset your password."/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/ll1"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_gravity="bottom"
+                android:gravity="center_horizontal"
                 android:background="@drawable/text_field"
-                android:gravity="center_horizontal">
+                android:orientation="vertical">
+
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Email"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    app:endIconMode="password_toggle">
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp">
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Password"/>
+                        android:hint="Email"
+                        android:id="@+id/et_forgotEmail"/>
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <Button
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:text="Sign In"
-                    android:textAllCaps="false"
+                    android:text="Send Email"
                     android:background="@drawable/filled_button"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/btn_resetPass"
+                    android:layout_marginBottom="70dp"
                     android:textSize="18sp"
-                    android:layout_marginTop="20dp"/>
-            </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:textAllCaps="false"/>
 
+
+            </LinearLayout>
+
+        </LinearLayout>
     </ScrollView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
