--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,9 +9,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:fillViewport="true"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,95 +19,103 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/primary"
             android:orientation="vertical"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:background="@color/primary">
+            android:paddingRight="5dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/audiowide"
                 android:text="Create\nAccount"
                 android:textColor="@color/white"
-                android:textSize="38sp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"/>
+                android:textSize="38sp" />
+
             <ImageView
+                android:id="@+id/imgProfile"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
-                android:layout_gravity="center"
-                android:id="@+id/imgProfile"
-                android:src="@drawable/man"/>
+                android:src="@drawable/man" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
-                android:orientation="vertical"
+                android:background="@drawable/text_pallet"
                 android:gravity="center_horizontal"
-                android:background="@drawable/text_pallet">
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sign Up"
-                    android:textSize="25sp"
-                    android:textColor="@color/primary"
-                    android:fontFamily="casual"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center_horizontal"/>
+                    android:fontFamily="casual"
+                    android:text="Sign Up"
+                    android:textColor="@color/primary"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Email"
-                        android:id="@+id/etSignUpInEmail"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/etUserName"
-                        android:hint="Username"/>
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    app:endIconMode="password_toggle"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp">
+
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etSignUpInEmail"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Password"
-                        android:id="@+id/etSignUpPassword"/>
+                        android:hint="Email" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etUserName"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Username" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    app:endIconMode="password_toggle">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etSignUpPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Password" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnSignUp"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
                     android:background="@drawable/filled_button"
                     android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
-                    android:paddingRight="10dp"
                     android:paddingLeft="10dp"
-                    android:id="@+id/btnSignUp"
+                    android:paddingRight="10dp"
                     android:text="Sign Up"
                     android:textAllCaps="false"
                     android:textColor="@color/primary"
-                    android:textSize="16sp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"/>
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
