--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,25 +7,21 @@
     tools:context=".MainActivity2">
 
 
-    <com.ismaeldivita.chipnavigation.ChipNavigationBar
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/nav_shape"
-        android:elevation="10dp"
-        android:outlineAmbientShadowColor="@color/black"
-        android:padding="2dp"
-        app:cnb_iconSize="25dp"
-        app:cnb_menuResource="@menu/navigation_menu"
-        app:cnb_unselectedColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginBottom="30dp"
+        app:itemIconSize="25sp"
+        android:elevation="10dp"
+        android:background="@drawable/nav_shape"
+        app:menu="@menu/navigation_menu"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent" />
-
 
     <FrameLayout
         android:id="@+id/fragment_container"
