--- a/app/src/main/res/layout/chat_vm_2.xml
+++ b/app/src/main/res/layout/chat_vm_2.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/sender_chat_bubble"
             android:minHeight="70dp"
-            android:background="@drawable/green_chat_bubble"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/chat_rec_you"
+                android:id="@+id/chat_rec_Name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -30,12 +32,14 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/chat_rec_mymsg"
+                android:id="@+id/chat_rec_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="0dp"
+                android:maxWidth="300dp"
+                android:minWidth="150dp"
                 android:text=" Messege"
                 android:textAlignment="center"
                 android:textColor="@color/white"
