--- a/app/src/main/res/layout/my_chat_vm.xml
+++ b/app/src/main/res/layout/my_chat_vm.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/blue_chat_bubble"
+            android:background="@drawable/you_chat_bubble"
             android:orientation="vertical">
 
             <TextView
@@ -38,7 +38,9 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="0dp"
                 android:text="your Messege"
+                android:maxWidth="300dp"
                 android:textAlignment="center"
+                android:minWidth="200dp"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
